--- a/package.json
+++ b/package.json
@@ -1,33 +1,16 @@
 {
   "name": "pin-simple",
-  "version": "0.1.0",
-  "private": true,
-  "main": "babel.config.js",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/bchiang7/pin-simple.git"
-  },
-  "keywords": [],
-  "author": "",
+  "version": "0.0.0",
+  "description": "",
+  "author": "Brittany Chiang <brittany.chiang@gmail.com>",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/bchiang7/pin-simple/issues"
   },
   "homepage": "https://github.com/bchiang7/pin-simple#readme",
-  "postcss": {
-    "plugins": {
-      "autoprefixer": {}
-    }
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ],
+  "main": "server/index.js",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "lint-staged": {
     "*.js": [
@@ -37,30 +20,19 @@
   },
   "husky": {
     "hooks": {
-      "pre-commit": "lint-staged"
+      "pre-commit": "pretty-quick --staged"
     }
   },
   "dependencies": {
-    "vue": "^2.6.6"
+    "dotenv": "^6.2.0",
+    "express": "^4.16.4"
   },
   "devDependencies": {
-    "@upstatement/eslint-config": "^0.4.0",
     "@upstatement/prettier-config": "^0.3.0",
-    "@vue/cli-plugin-babel": "^3.4.0",
-    "@vue/cli-plugin-eslint": "^3.4.0",
-    "@vue/cli-service": "^3.4.0",
-    "babel-eslint": "^10.0.1",
-    "eslint": "^5.13.0",
-    "eslint-config-prettier": "^4.0.0",
-    "eslint-plugin-vue": "^5.1.0",
+    "concurrently": "^4.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.3",
-    "node-sass": "^4.11.0",
-    "prettier": "^1.16.4",
     "pretty-quick": "^1.10.0",
-    "sass-loader": "^7.1.0",
-    "style-resources-loader": "^1.2.1",
-    "vue-eslint-parser": "^6.0.2",
-    "vue-template-compiler": "^2.6.6"
+    "prettier": "^1.16.4"
   }
 }
