--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
     "url": "https://github.com/bchiang7/pin-simple/issues"
   },
   "homepage": "https://github.com/bchiang7/pin-simple#readme",
+  "engines": {
+    "node": "10.13.0"
+  },
   "main": "server/index.js",
   "scripts": {
     "client:install": "cd client && yarn",
@@ -37,7 +40,7 @@
     "concurrently": "^4.1.0",
     "husky": "^1.3.1",
     "lint-staged": "^8.1.3",
-    "pretty-quick": "^1.10.0",
-    "prettier": "^1.16.4"
+    "prettier": "^1.16.4",
+    "pretty-quick": "^1.10.0"
   }
 }
