--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "main": "server/index.js",
   "scripts": {
     "client:install": "cd client && yarn",
-    "client": "cd client && yarn start",
+    "client": "cd client && npm run serve",
     "server": "node server",
     "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
     "start": "node server",
@@ -32,8 +32,12 @@
     }
   },
   "dependencies": {
+    "cookie-parser": "^1.4.4",
+    "cors": "^2.8.5",
     "dotenv": "^6.2.0",
-    "express": "^4.16.4"
+    "express": "^4.16.4",
+    "query-string": "^6.2.0",
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "@upstatement/prettier-config": "^0.3.0",
