--- a/client/package.json
+++ b/client/package.json
@@ -42,7 +42,8 @@
   },
   "dependencies": {
     "axios": "^0.18.0",
-    "vue": "^2.6.6"
+    "vue": "^2.6.6",
+    "vue-router": "^3.0.2"
   },
   "devDependencies": {
     "@upstatement/eslint-config": "^0.4.0",
