Get things working

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 PORT=8888
 APP_ID=
 APP_SECRET=
-LOCAL=
+LOCAL=https://localhost:8888
 REDIRECT_URI=
-FRONTEND_URI=
+FRONTEND_URI=http://localhost:8080
