--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "pin-simple",
   "version": "0.0.0",
-  "description": "",
+  "description": "Pinterest, but just the pictures",
   "author": "Brittany Chiang <brittany.chiang@gmail.com>",
   "license": "MIT",
   "bugs": {
