--- a/package.json
+++ b/package.json
@@ -3,11 +3,16 @@
   "version": "0.0.0",
   "description": "Pinterest, but just the pictures",
   "author": "Brittany Chiang <brittany.chiang@gmail.com>",
-  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bchiang7/pin-simple.git"
+  },
   "bugs": {
     "url": "https://github.com/bchiang7/pin-simple/issues"
   },
   "homepage": "https://github.com/bchiang7/pin-simple#readme",
+  "keywords": [],
+  "license": "MIT",
   "engines": {
     "node": "10.13.0"
   },
